configuration options to choose which events to write, only write full events on first iteration